--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,5 +21,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: 'OpenFOAM/'
+      - name: Check install
+        run: cd OpenFOAM && ls -la
 
 
