ci: build docker image

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,11 @@
 name: Build blastFOAM
 
 on:
-  push
+  # push:
+  #   paths-ignore:
+  #     - docker/**
+  workflow_dispatch: # ! pause this execution
+    
 
 jobs:
   build:
