--- a/.github/workflows/build-and-push-docker.yaml
+++ b/.github/workflows/build-and-push-docker.yaml
@@ -14,6 +14,11 @@ jobs:
       container-workspace: "/__w/blastfoam-dev/blastfoam-dev"
     steps:
       - uses: actions/checkout@v3
+      - uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
         with:
@@ -22,8 +27,8 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          push: false
-          tags: blastfoam-dev
+          push: true
+          tags: ghcr.io/synthetik-technologies/blastfoam-dev:latest
           file: docker/Dockerfile
           cache-from: type=gha
           cache-to: type=gha, mode=max
