ci: update Dockerimage

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,22 +7,22 @@ RUN apt-get update \
 RUN apt-get -y install openfoam9
 
 FROM ubuntu:18.04 AS build
-SHELL [ "/bin/bash", "-c" ]
+SHELL [ "/bin/bash", "-lc" ]
 COPY --from=openfoam /opt/openfoam9 /opt/openfoam9
 RUN apt-get update && apt-get install -y apt-utils build-essential libopenmpi-dev
-WORKDIR /app/OpenFOAM/blastfoam
+WORKDIR /opt/blastfoam
 COPY . .
-RUN source /opt/openfoam9/etc/bashrc \
-  && source etc/bashrc \
+RUN echo "source /opt/openfoam9/etc/bashrc" >> ~/.bashrc \
+  && echo "source /opt/blastfoam/etc/bashrc" >> ~/.bashrc \
+  && source /opt/openfoam9/etc/bashrc \
+  && source /opt/blastfoam/etc/bashrc \
   && ./Allwmake -j \
   && ./Allwclean
 
-FROM ubuntu:18.04 as run
+FROM ubuntu:18.04 as prod
 SHELL [ "/bin/bash", "-c" ]
 RUN apt-get update && apt-get install -y gnuplot libopenmpi-dev
-COPY --from=build /opt/openfoam9 /opt/openfoam9
-COPY --from=build /app /app
+COPY --from=build /opt /opt
 COPY --from=build /root /root
-RUN echo "source /opt/openfoam9/etc/bashrc" >> ~/.bashrc \
-  && echo "source /app/OpenFOAM/blastfoam/etc/bashrc" >> ~/.bashrc
-WORKDIR /app/OpenFOAM/blastfoam
+WORKDIR /app/blastfoam
+ENTRYPOINT ["/bin/bash", "-ci"]
