--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -14,3 +14,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Build from makefile
         run: debuild -rsudo --no-lintian -i -nc -us -uc -b --jobs=10
+      - name: Output Debian Package
+        uses: actions/upload-artifact@v3
+        with:
+          name: blastfoam-untested.deb
+          path: ${{ github.workspace }}/blastfoam-*.deb
