--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -9,6 +9,9 @@ jobs:
   build:
     runs-on: ['self-hosted', 'deb', 'openfoam']
     name: Build openfoam
+    defaults:
+      run:
+        working-directory: ./blastfoam-src
     steps:
       - name: Checkout blastFOAM
         uses: actions/checkout@v3
