--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -8,10 +8,10 @@ on:
 jobs:
   build:
     runs-on: ['self-hosted', 'deb', 'openfoam']
-    name: Build openfoam
+    name: Build BlastFoam
     defaults:
       run:
-        working-directory: ./blastfoam-src
+        working-directory: blastfoam-src
     steps:
       - name: Checkout blastFOAM
         uses: actions/checkout@v3
