--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -34,9 +34,9 @@ jobs:
           name: blastfoam-untested.deb
           path: ${{ github.workspace }}/blastfoam_*.deb
 
-  install:
+  install-and-validate:
     runs-on: ['self-hosted', 'deb', 'openfoam']
-    name: Install BlastFoam
+    name: Validate BlastFoam
     needs:
       - build
     steps:
@@ -46,5 +46,20 @@ jobs:
           name: blastfoam-untested.deb
           path: ${{ github.workspace }}
       - name: Install Debian Package
-        run: sudo dpkg -i ${{ github.workspace }}/blastfoam_*.deb
+        run: sudo dpkg -i blastfoam-untested.deb
       - run: ls -la /opt
+      - name: Checkout blastFOAM
+        uses: actions/checkout@v3
+        with:
+          path:
+            blastfoam-src
+      - shell: bash -l {0}
+        run: |
+          source /opt/openfoam9/etc/bashrc
+          source /opt/blastfoam/etc/bashrc
+          ./blastfoam-src/validation/blastFoam/shockTube_twoFluids/Allrun
+      - name: Upload Validation Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: validation-results
+          path: validation/blastFoam/shockTube_twoFluids
