--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: blastfoam_*.deb
-          key: $(md5sum blastfoam-src/cache-check.tar.gz)
+          key: ${{ hashFiles('blastfoam-src/cache-check.tar.gz') }}
       - name: Build from makefile
         if: ${{ steps.check-cache.outputs.cache-hit == 'false' }}
         run: debuild --no-lintian -i -nc -us -uc -b --jobs=10
