--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -47,7 +47,7 @@ jobs:
           name: blastfoam-untested.deb
           path: ${{ github.workspace }}
       - name: Install Debian Package
-        run: sudo dpkg -i blastfoam-untested.deb
+        run: sudo dpkg -i blastfoam_*.deb
       - run: ls -la /opt
       - name: Checkout blastFOAM
         uses: actions/checkout@v3
