ci: ignore cache for now

--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -19,14 +19,14 @@ jobs:
           path: 'blastfoam-src'
       # - name: Build Tar for Cache
       #   run: tar --mtime='1970-01-01' -czf cache-check.tar.gz Makefile applications debian etc src
-      - name: Check Cache
-        id: check-cache
-        uses: actions/cache@v3
-        with:
-          path: blastfoam_*.deb
-          key: ${{ hashFiles('blastfoam-src/Makefile', 'blastfoam-src/applications/**', 'blastfoam-src/debian/**', 'blastfoam-src/etc/**', 'blastfoam-src/src/**') }}
-      - run: echo ${{ steps.check-cache.outputs.cache-hit }}
-      - name: Build from makefile
+      # - name: Check Cache
+      #   id: check-cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: blastfoam_*.deb
+      #     key: ${{ hashFiles('blastfoam-src/Makefile', 'blastfoam-src/applications/**', 'blastfoam-src/debian/**', 'blastfoam-src/etc/**', 'blastfoam-src/src/**') }}
+      # - run: echo ${{ steps.check-cache.outputs.cache-hit }}
+      # - name: Build from makefile
         if: ${{ steps.check-cache.outputs.cache-hit != 'true' }}
         run: debuild --no-lintian -i -nc -us -uc -b --jobs=10
       - name: Output Debian Package
