--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -17,17 +17,19 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: 'blastfoam-src'
-      # - name: Build Tar for Cache
-      #   run: tar --mtime='1970-01-01' -czf cache-check.tar.gz Makefile applications debian etc src
-      # - name: Check Cache
-      #   id: check-cache
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: blastfoam_*.deb
-      #     key: ${{ hashFiles('blastfoam-src/Makefile', 'blastfoam-src/applications/**', 'blastfoam-src/debian/**', 'blastfoam-src/etc/**', 'blastfoam-src/src/**') }}
-      # - run: echo ${{ steps.check-cache.outputs.cache-hit }}
+      - name: Build Tar for Cache
+        run: | 
+          tar -cfz checksum.tar.gz --mtime='UTC 2019-01-01' --group=0 --owner=0 --numeric-owner --sort=name Makefile applications debian etc src
+          echo 'checksum=$(sha1sum checksum.tar.gz)' >> GITHUB_ENV
+      - name: Check Cache
+        id: check-cache
+        uses: actions/cache@v3
+        with:
+          path: blastfoam_*.deb
+          key: ${{ env.checksum }}
+      - run: echo ${{ steps.check-cache.outputs.cache-hit }}
       - name: Build from makefile
-        # if: ${{ steps.check-cache.outputs.cache-hit != 'true' }}
+        if: ${{ steps.check-cache.outputs.cache-hit != 'true' }}
         run: debuild --no-lintian -i -nc -us -uc -b --jobs=10
       - name: Output Debian Package
         uses: actions/upload-artifact@v3
