ci: still fixing cache

--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: blastfoam_*.deb
-          key: ${{ hashFiles(checksum.tar.gz) }}
+          key: ${{ hashFiles('blastfoam-src/checksum.tar.gz') }}
       - run: echo ${{ steps.check-cache.outputs.cache-hit }}
       - name: Build from makefile
         if: ${{ steps.check-cache.outputs.cache-hit != 'true' }}
