ci: combine validation artifacts

--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -63,16 +63,18 @@ jobs:
         with:
           path:
             blastfoam-src
-      - shell: bash -l {0}
+      - name: Run ${{ matrix.solver }}
+        shell: bash -l {0}
         run: |
           source /opt/openfoam9/etc/bashrc
           source /opt/blastfoam/etc/bashrc
           ./blastfoam-src/validation/${{ matrix.solver }}/${{ matrix.scenario }}/Allrun
+          touch ./blastfoam-src/validation/run-on-gh.txt
       - name: Upload Validation Results
         uses: actions/upload-artifact@v3
         with:
           name: validation-results-${{ matrix.scenario }}
-          path: blastfoam-src/validation
+          path: blastfoam-src/validation/${{ matrix.solver }}/${{ matrix.scenario }}
           retention-days: 30
       - name: Uninstall Debian Package
         run: sudo dpkg -r blastfoam
