--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -72,7 +72,7 @@ jobs:
           - solver: setRefinedFields
             tutorial: .
     runs-on: ['self-hosted', 'deb', 'openfoam']
-    name: Validate BlastFoam
+    name: Validate ${{ matrix.solver }}
     needs:
       - build
     steps:
@@ -94,7 +94,7 @@ jobs:
           source /opt/openfoam9/etc/bashrc
           source /opt/blastfoam/etc/bashrc
           echo "SOLVER=${{ matrix.solver }}" >> $GITHUB_ENV
-          if [[ -v ${{ matrix.validation }} ]]; then
+          if [[ -v ${{ toJSON(matrix.validation) }} ]]; then
             ./blastfoam-src/validation/${{ matrix.solver }}/${{ matrix.validation }}/Allrun
             echo "TYPE=validation" >> $GITHUB_ENV
             echo "SCENARIO=${{ matrix.validation }}" >> $GITHUB_ENV
