--- a/.github/workflows/build-deb.yaml
+++ b/.github/workflows/build-deb.yaml
@@ -94,7 +94,7 @@ jobs:
           source /opt/openfoam9/etc/bashrc
           source /opt/blastfoam/etc/bashrc
           echo "SOLVER=${{ matrix.solver }}" >> $GITHUB_ENV
-          if [ -z "${{ matrix.validation }}" ]; then
+          if [ -n "${{ matrix.validation }}" ]; then
             ./blastfoam-src/validation/${{ matrix.solver }}/${{ matrix.validation }}/Allrun
             echo "TYPE=validation" >> $GITHUB_ENV
             echo "SCENARIO=${{ matrix.validation }}" >> $GITHUB_ENV
